Fix input alignment

--- a/less/widgets/signupform.less
+++ b/less/widgets/signupform.less
@@ -74,6 +74,9 @@
 
 	.form-group {
 		margin-bottom: 0;
+		display: -ms-flexbox;
+		display: -webkit-flex;
+		display: flex;
 		&:first-child {
 			-webkit-box-flex: 0;
 			-moz-box-flex: 0;
